--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,41 @@
+* {
+  font-family: 'Roboto', sans-serif;
+}
+
 .App {
-  text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
   min-height: 100vh;
+  background-image: linear-gradient(120deg, #a6c0fe 0%, #f68084 100%);
+}
+
+.search-form {
+  min-height: 10vh;
   display: flex;
-  flex-direction: column;
-  align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
+  align-items: center;
+  outline: none;
+}
+
+.search-bar {
+  width: 50%;
+  border: 2px solid black;
+  border-radius: 10px 0px 0px 10px;
+  padding: 10px;
+  outline: none;
+}
+
+.search-button {
+  background-color: lightcoral;
+  padding: 10px 20px;
+  border: 2px solid black;
+  border-radius: 0px 10px 10px 0px;
+  border-left: none;
   color: white;
+  font-weight: bold;
+  outline: none;
 }
 
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.recipes {
+  display: flex;
+  justify-content: space-around;
+  flex-wrap: wrap;
 }
